Update 1- игра. html.html

--- a/1- игра. html.html
+++ b/1- игра. html.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-<title>Қарапайым Машина Ойыны</title>
+<title>car/byyesber</title>
 <style>
   html, body {
     margin: 0;
@@ -139,7 +139,7 @@
 
 <div id="menu">
   <div class="card">
-    <h1>Қарапайым Машина Ойыны</h1>
+    <h1>car/byyesber</h1>
     <p>Солға/оңға бұрып, газ/тежегішті қолданып кедергілерден қаш. Құласаң – қайта бастай бер!</p>
     <div class="row">
       <button class="primary" id="playBtn">Ойынды бастау</button>
